--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -6,9 +6,6 @@ body {
 }
 
 .login-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
 }
 
@@ -17,6 +14,7 @@ body {
     width: 20rem;
     height: 24rem;
     padding: 40px;
+    margin: 50px auto;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
