--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -8,7 +8,7 @@ body {
 .container {
     width: 25rem;
     margin: 50px auto;
-    padding: 20px;
+    padding: 2rem 1.5rem;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -36,7 +36,7 @@ input{
 }
 
 input[type="submit"] {
-    width: 100%;
+    width: 99%;
     padding: 10px;
     background-color: black;
     color: #fff;
@@ -69,7 +69,7 @@ input[type="submit"]:hover {
 @media (max-width: 768px) {
     .container{
         width: 20rem;
-        padding: 10px 20px;
+        padding: 0.5rem 1.5rem;
     }
 
     label {
